--- a/index.html
+++ b/index.html
@@ -139,10 +139,12 @@ window.onload = function() {
     <div><em>December 2012:</em> PPD releases Part I crime data</div>
     <div><em>January 2013: <a href="http://phlcrimemapper.com" target="_new">PHL Crime Mapper</a> released.</em> Three weekends + JavaScript + Leaflet + jQuery UI + Amazon S3</em></div>
     <div><em>Feedback!</em> New feature requests</div>
-    <div><em>2015:</em><a href="http://alpha.phlcrimemapper.com" target="_new">PHL Crime Mapper 2.0</a> Material Design, AngularJS, Go backend, Postgres database</em></div>
+    <div><em>2015:</em><a href="http://alpha.phlcrimemapper.com" target="_new">PHL Crime Mapper 2.0</a> Material Design + AngularJS + Go backend + Postgres database + more than three weekends</em></div>
     <div><em>Interesting problems:</em> Draw tool</div>
     <div><em>Interesting problems:</em> Mobile? Tablets? Wha?</div>
     <div><em>Interesting problems:</em> How else can this help?</div>
+    <div><em>Interesting problems:</em> Marker clustering? Heatmaps?</div>
+    <div><em>Interesting problems:</em> Alerts?</div>
     <div><em>The data then</em> Updated daily, new crimes showing up two days after being reported</div>
     <div><em>The data then</em> An REST API and WMS server via ArcGIS server and static .CSV</div>
     <div><em>The data now?</em></div>
@@ -151,6 +153,6 @@ window.onload = function() {
     <div><em>Ideas</em> Weather? Seasons?</div>
     <div><em>Ideas</em> Proximity to placemarks?</div>
     <div><em>Ideas</em> Proximity to foot traffic?</div>
-    <div><em>Thx</em> @ddw<br />davewalk.net</div>
+    <div><em>Thx!</em> @ddw<br />davewalk.net</div>
     <div>(Presentation written while listening to Rancid songs)</div>
 </body>
