--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@ window.onload = function() {
     <div><em>Feedback!</em> New feature requests</div>
     <div><em>2015:</em><a href="http://alpha.phlcrimemapper.com" target="_new">PHL Crime Mapper 2.0</a> Material Design + AngularJS + Go backend + Postgres database + more than three weekends</em></div>
     <div><em>Interesting problems:</em> Draw tool</div>
-    <div><em>Interesting problems:</em> Mobile? Tablets? Wha?</div>
-    <div><em>Interesting problems:</em> How else can this help?</div>
+    <div><em>Interesting problems:</em> Mobile? Tablets? Wha?</div>    
     <div><em>Interesting problems:</em> Marker clustering? Heatmaps?</div>
     <div><em>Interesting problems:</em> Alerts?</div>
+    <div><em>Interesting problems:</em> How else can this help?</div>
     <div><em>The data then</em> Updated daily, new crimes showing up two days after being reported</div>
     <div><em>The data then</em> An REST API and WMS server via ArcGIS server and static .CSV</div>
     <div><em>The data now?</em></div>
@@ -153,6 +153,6 @@ window.onload = function() {
     <div><em>Ideas</em> Weather? Seasons?</div>
     <div><em>Ideas</em> Proximity to placemarks?</div>
     <div><em>Ideas</em> Proximity to foot traffic?</div>
-    <div><em>Thx!</em> @ddw<br />davewalk.net</div>
+    <div><em>Thx!</em> @ddw<br />davewalk.net<br />github.com/davewalk</div>
     <div>(Presentation written while listening to Rancid songs)</div>
 </body>
